cmake_minimum_required(VERSION 3.20)

project(FileManagementSystem LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(fms
    main.cpp
    File.cpp
    Directory.cpp
    FileSystem.cpp
    CommandParser.cpp
    Storage.cpp
    Utility.cpp
)

if(MSVC)
    target_compile_options(fms PRIVATE /W4)
else()
    target_compile_options(fms PRIVATE -Wall -Wextra -pedantic)
endif()
